--- a/src/app/pages/news/news-list/news-list.component.html
+++ b/src/app/pages/news/news-list/news-list.component.html
@@ -5,32 +5,28 @@
     <a
       [routerLink]="['/news/create']"
       routerLinkActive="router-link-active"
-      class="flex items-center gap-3 bg-purple-500 py-3 px-4 rounded-lg text-white font-poppins text-sm hover:bg-purple-600"
-    >
-      <mat-icon svgIcon="plus" class="!w-[16px]"></mat-icon>
+      class="flex items-center gap-3 bg-purple-500 py-3 px-4 rounded-lg text-white font-poppins text-sm hover:bg-purple-600">
+      <mat-icon
+        svgIcon="plus"
+        class="!w-[16px]"></mat-icon>
       Yangilik yaratish
     </a>
   </div>
   <div
     *ngIf="!newsList()?.length"
-    class="h-[240px] flex flex-col items-center w-full justify-center"
-  >
+    class="h-[240px] flex flex-col items-center w-full justify-center">
     <p-progress-spinner
       strokeWidth="4"
       fill="transparent"
       animationDuration=".5s"
-      [style]="{ width: '70px', height: '70px' }"
-    />
+      [style]="{ width: '70px', height: '70px' }"></p-progress-spinner>
     <p>Yuklanmoqda....</p>
   </div>
 
   <div
     *ngIf="newsList()"
-    class="grid grid-cols-1 justify-center bg-white rounded-xl overflow-hidden shadow-md"
-  >
-    <div
-      class=" hidden md:grid grid-cols-[595px_150px_150px_auto] w-full m-auto gap-3 justify-items-center hover:bg-slate-200 transition-all duration-[750ms] p-[18px] font-poppins text-sm font-semibold text-neutral-800"
-    >
+    class="grid grid-cols-1 justify-center bg-white rounded-xl overflow-hidden shadow-md">
+    <div class="hidden md:grid grid-cols-[595px_150px_150px_auto] w-full m-auto gap-3 justify-items-center hover:bg-slate-200 transition-all duration-[750ms] p-[18px] font-poppins text-sm font-semibold text-neutral-800">
       <p class="text-left w-full">Yangilik nomi</p>
       <p class="w-full">Vaqti</p>
       <p class="w-full">Ko'rishlar soni</p>
@@ -38,15 +34,13 @@
     </div>
     <div
       *ngFor="let news of newsList(); let i = index"
-      class="w-full m-auto p-[18px] font-poppins transition-all duration-150 hover:bg-slate-100 rounded-md flex flex-col gap-4 md:grid md:grid-cols-[1fr_150px_100px_auto] md:items-center md:gap-3"
-    >
+      class="w-full m-auto p-[18px] font-poppins transition-all duration-150 hover:bg-slate-100 rounded-md flex flex-col gap-4 md:grid md:grid-cols-[1fr_150px_100px_auto] md:items-center md:gap-3">
       <!-- Rasm + Sarlavha + Slug -->
       <div class="flex items-center gap-3">
         <img
           [src]="apiUrl + news.image"
           class="w-11 h-11 rounded-md object-cover shrink-0"
-          alt="image"
-        />
+          alt="image">
         <div class="flex flex-col overflow-hidden">
           <p class="text-sm font-medium text-gray-800 line-clamp-1">
             {{ news?.contents?.["uz"]!.title }}
@@ -57,36 +51,37 @@
 
       <!-- Sana -->
       <div class="flex flex-row md:flex-col w-full md:w-auto justify-between">
-        <p class="text-xs text-gray-600 flex items-center ">
-          <mat-icon  class="!w-[12px] !h-[12px] text-[11px]" >date_range</mat-icon>
+        <p class="text-xs text-gray-600 flex items-center">
+          <mat-icon class="!w-[12px] !h-[12px] text-[11px]">date_range</mat-icon>
           {{ news.createdAt | date : "dd MMM yyyy" }}
         </p>
 
         <!-- Ko‘rish soni (hozircha 1000) -->
         <p class="text-xs text-gray-600 flex items-center gap-2">
-          <mat-icon svgIcon="eye" class="!w-[10px]"></mat-icon> 1000
+          <mat-icon
+            svgIcon="eye"
+            class="!w-[10px]"></mat-icon> 1000
         </p>
       </div>
 
       <!-- Actions -->
       <div class="flex gap-2 justify-start md:justify-end">
-        <button
-          class="w-8 h-8 flex items-center justify-center text-gray-400 hover:bg-gray-200 hover:text-green-600 rounded-full transition-all"
-        >
+        <a
+          [routerLink]="'/news/update/'+news!._id"
+          class="w-8 h-8 flex items-center justify-center text-gray-400 hover:bg-gray-200 hover:text-green-600 rounded-full transition-all">
           <mat-icon
             svgIcon="pencil"
-            class="!w-[16px] !h-[16px] text-inherit"
-          ></mat-icon>
+            class="!w-[16px] !h-[16px] text-inherit"></mat-icon>
+        </a>
+        <button class="w-8 h-8 flex items-center justify-center text-gray-400 hover:bg-gray-200 hover:text-purple-600 rounded-full transition-all">
+          <mat-icon
+            svgIcon="eye"
+            class="!w-[16px] !h-[16px]"></mat-icon>
         </button>
-        <button
-          class="w-8 h-8 flex items-center justify-center text-gray-400 hover:bg-gray-200 hover:text-purple-600 rounded-full transition-all"
-        >
-          <mat-icon svgIcon="eye" class="!w-[16px] !h-[16px]"></mat-icon>
-        </button>
-        <button
-          class="w-8 h-8 flex items-center justify-center text-gray-400 hover:bg-gray-200 hover:text-red-600 rounded-full transition-all"
-        >
-          <mat-icon svgIcon="trash" class="!w-[16px] !h-[16px]"></mat-icon>
+        <button class="w-8 h-8 flex items-center justify-center text-gray-400 hover:bg-gray-200 hover:text-red-600 rounded-full transition-all">
+          <mat-icon
+            svgIcon="trash"
+            class="!w-[16px] !h-[16px]"></mat-icon>
         </button>
       </div>
     </div>
